--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,29 @@ typings/
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
+
+# Android built artifacts
+*.apk
+*.ap_
+*.dex
+
+# Java build artifacts class files
+*.class
+
+# other generated files
+bin/
+gen/
+build/
+
+# local configuration file (for Android sdk path, etc)
+local.properties
+
+# Eclipse project files
+.classpath
+.project
+
+# Android Studio
+*.iml
+
+#NDK
+obj/
