--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,11 +34,15 @@ repositories {
     google()
     jcenter()
     mavenCentral()
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compile(name:'alipaySdk-15.6.8-20191021122514', ext:'aar')
+    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     implementation project(':capacitor-android')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
