--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 
   <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.capacitor.ali.capacitoralipay">
+      package="com.capacitor.ali.capalipay">
   </manifest>
   
