--- a/android/build.gradle
+++ b/android/build.gradle
@@ -47,6 +47,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation(name:'alipaySdk-15.6.8-20191021122514', ext:'aar')
-    implementation('com.android.support:appcompat-v7:28.0.0')
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 }
 
