--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cap-alipay",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "capacitor plugin for alipay",
   "main": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
@@ -13,13 +13,13 @@
   "author": "jing-zhou",
   "license": "MIT",
   "dependencies": {
-    "@capacitor/core": "latest"
+    "@capacitor/core": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "rimraf": "^3.0.0",
     "typescript": "^3.2.4",
-    "@capacitor/ios": "latest",
-    "@capacitor/android": "latest"
+    "@capacitor/ios": "^2.0.0-beta.0",
+    "@capacitor/android": "^2.0.0-beta.0"
   },
   "files": [
     "dist/",
