--- a/package.json
+++ b/package.json
@@ -1,37 +1,74 @@
 {
   "name": "cap-alipay",
-  "version": "0.0.17",
+  "version": "1.0.0",
   "description": "capacitor plugin for alipay",
-  "main": "dist/esm/index.js",
+  "main": "dist/plugin.cjs.js",
+  "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
-  "scripts": {
-    "build": "npm run clean && tsc",
-    "clean": "rimraf ./dist",
-    "watch": "tsc --watch",
-    "prepublishOnly": "npm run build"
-  },
+  "unpkg": "dist/plugin.js",
+  "files": [
+    "android/src/main/",
+    "android/build.gradle",
+    "dist/",
+    "ios/Sources",
+    "ios/Tests",
+    "Package.swift",
+    "CapAlipay.podspec"
+  ],
   "author": "jing-zhou",
   "license": "MIT",
-  "dependencies": {
-    "@capacitor/core": "^2.4.0"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jing-zhou/cap-alipay.git"
   },
-  "devDependencies": {
-    "rimraf": "^3.0.2",
-    "typescript": "3.8.3",
-    "@capacitor/ios": "^2.4.0",
-    "@capacitor/android": "^2.4.0"
+  "bugs": {
+    "url": "https://github.com/jing-zhou/cap-alipay.git/issues"
   },
-  "files": [
-    "dist/",
-    "ios/",
-    "android/",
-    "CapacitorAlipay.podspec"
-  ],
   "keywords": [
     "capacitor",
     "plugin",
     "native"
   ],
+  "scripts": {
+    "verify": "npm run verify:ios && npm run verify:android && npm run verify:web",
+    "verify:ios": "xcodebuild -scheme CapPluginMyplugin -destination generic/platform=iOS",
+    "verify:android": "cd android && ./gradlew clean build test && cd ..",
+    "verify:web": "npm run build",
+    "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint -- lint",
+    "fmt": "npm run eslint -- --fix && npm run prettier -- --write && npm run swiftlint -- --fix --format",
+    "eslint": "eslint . --ext ts",
+    "prettier": "prettier \"**/*.{css,html,ts,js,java}\" --plugin=prettier-plugin-java",
+    "swiftlint": "node-swiftlint",
+    "docgen": "docgen --api ExamplePlugin --output-readme README.md --output-json dist/docs.json",
+    "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.js",
+    "clean": "rimraf ./dist",
+    "watch": "tsc --watch",
+    "prepublishOnly": "npm run build"
+  },
+  "devDependencies": {
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/docgen": "^0.2.2",
+    "@capacitor/ios": "^6.0.0",
+    "@ionic/eslint-config": "^0.4.0",
+    "@ionic/prettier-config": "^4.0.0",
+    "@ionic/swiftlint-config": "^1.1.2",
+    "eslint": "^8.57.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-java": "^2.6.4",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.32.0",
+    "swiftlint": "^1.0.1",
+    "typescript": "~4.1.5"
+  },
+  "peerDependencies": {
+    "@capacitor/core": "^6.0.0"
+  },
+  "prettier": "@ionic/prettier-config",
+  "swiftlint": "@ionic/swiftlint-config",
+  "eslintConfig": {
+    "extends": "@ionic/eslint-config/recommended"
+  },
   "capacitor": {
     "ios": {
       "src": "ios"
@@ -39,12 +76,5 @@
     "android": {
       "src": "android"
     }
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jing-zhou/cap-alipay.git"
-  },
-  "bugs": {
-    "url": "https://github.com/jing-zhou/cap-alipay.git/issues"
   }
 }
