--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
 
-  <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.capacitor.ali.capalipay">
-  </manifest>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+</manifest>
   
